QOL, readability, mobile fixes and fonts

--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,8 @@
 body {
   background: #2f353a; /*#253e52*/
   margin: 0;
-  font-family: 'Trebuchet MS', 'Gill Sans MT', 'Gill Sans', Calibri, sans-serif;
+  font-family: "Ubuntu", sans-serif;
+  /* font-family: 'Trebuchet MS', 'Gill Sans MT', 'Gill Sans', Calibri, sans-serif; */
   color: var(--text-color);
   
   text-rendering: optimizeLegibility;
@@ -193,6 +194,10 @@ textarea {
   color: var(--text-color);
   background-color: var(--box-fill-color);
   resize: none;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 200;
+  letter-spacing: 0.063em;
+  word-break: break-word;
 }
 input {
   color: var(--text-color);
@@ -240,14 +245,13 @@ input {
   line-height: 1;
   letter-spacing: 0.3px;
 }
-.pt-sans {
-  font-family: "PT Sans", sans-serif;
-}
 .ubuntu {
   font-family: "Ubuntu", sans-serif;
 }
-.georgia {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+.roboto-300 {
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 0.2px;
+  font-weight: 300;
 }
 .red-text {
   color: rgb(180, 54, 54);
@@ -355,6 +359,7 @@ input {
 .flex-container {
   display: flex;
   gap: var(--box-gap);
+  align-items: center;
 }
 
 /*MARK: attributes
@@ -492,7 +497,6 @@ input {
   background-color: var(--box-item-fill);
   cursor: pointer;
   transition: 0.3s;
-  align-items: center;
   padding: var(--gap-small-vw) var(--box-padding);
 }
 .entry-wrapper-non-click {
@@ -526,6 +530,7 @@ input {
 .skill-grid {
   display: grid;
   grid-template-columns: 3fr 1fr 1fr 1fr;
+  align-items: center;
 }
 .skill-grid p {
   max-height: var(--min-entry-height);
@@ -534,9 +539,9 @@ input {
 .talent-grid {
   display: grid;
   grid-template-columns: 2fr 1fr 3fr;
-  align-items: center;
-  min-height: var(--min-entry-height);
   gap: 8px;
+  align-items: center;
+  min-height: calc(var(--min-entry-height) - (2 * var(--gap-small-vw)));
 }
 .talent-ranks-wrapper {
   display: grid;
@@ -558,7 +563,7 @@ input {
 .power-entry, .augment-entry {
   border-radius: var(--radius-main);
   background-color: var(--box-item-fill);
-  padding: var(--gap-small-vw) var(--box-padding);
+  padding: calc(var(--gap-small-vw) / 2) var(--box-padding) var(--gap-small-vw) var(--box-padding);
   transition: 0.3s;
   cursor: pointer;
 }
@@ -572,11 +577,12 @@ input {
 }
 .power-skill {
   font-size: 0.8em;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: "PT Serif", serif;
   font-style: italic;
-  letter-spacing: 0.8px;
+  letter-spacing: 1px;
 }
 .power-sub-grid {
+  padding-top: var(--gap-small-vw);
   display: grid;
   grid-template-columns: 7px 2fr 3fr 1fr 1fr 2fr;
   align-items: center;
@@ -628,11 +634,16 @@ input {
 .item-grid {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr 3fr;
+  align-items: center;
 }
 .item-feature-flex {
   display: flex; 
   flex-wrap: wrap;
   align-items: center;
+  gap: 0 var(--gap-large-vw);
+}
+.item-feature-flex p {
+  margin: 0 0 3px 0;
 }
 .item-feature-flex input { /*checkbox*/
   margin: 3px;
@@ -679,6 +690,11 @@ input {
   gap: var(--box-gap);
   flex: 1 1 20vh;
   overflow: hidden;
+}
+@media (max-width: 752px) {
+  .equal-flex-row {
+    flex: 1 1 35vh;
+  }
 }
 .equal-flex-row > * {
   flex-basis: 100%;
@@ -951,7 +967,7 @@ input {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   overflow-x: hidden;
   overflow-y: auto;
   top: 0;
@@ -1079,15 +1095,29 @@ input {
 .openbtn:hover {
   background-color: var(--box-fill-color);
 }
-#leftpanelbtn {
+.leftpanelbtn {
   left: 0;
 }
-#rightpanelbtn {
+.rightpanelbtn {
   right: 0;
 }
-.openstate {
+.rightOpen, .leftOpen {
   background-color: var(--panel-color);
   position: fixed;
+}
+.leftOpen {
+  left: 350px;
+}
+.rightOpen {
+  right: 350px;
+}
+@media (max-width: 385px) {
+  .leftOpen {
+    left: 0px;
+  }
+  .rightOpen {
+    right: 300px;
+  }
 }
 #lvlupbtn, #lvldownbtn {
   width: 50px;
@@ -1145,7 +1175,8 @@ input {
   margin: 25% auto 15% auto;
   margin: 25dvh auto 15dvh auto;
   border: 4px solid var(--accent-color);
-  width: 40%;
+  width: max(40%, 260px);
+  max-width: 400px;
 }
 
 /*MARK: svg/icons
@@ -1198,8 +1229,9 @@ input {
   mask-image: url(./img/add-bag-Icon.svg);
 }
 .icon-magic {
-  width: 1.875em;
-  height: 1.875em;
+  --icon-magic-size: 1.55em;
+  width: var(--icon-magic-size);
+  height: var(--icon-magic-size);
   -webkit-mask-image: url(./img/magic-Icon.svg);
   mask-image: url(./img/magic-Icon.svg);
 }
